# generativeUIWithVulkan

./: .gitignore  AGENTS.md  PROJECT_ANALYSIS.md  README.md  build-profile.json5  build.bat  compile_shaders.bat  compile_shaders.ps1
AppScope/: app.json5
AppScope/resources/base/element/: string.json
doc/: blue_yellow_project_background.md  context_sensing_implementation_plan.md  context_sensing_spec.md  context_sensing_v2_plan.md  custom_dsl_v2_设计思路.md  emotion_debug_page_implementation_plan.md  emotion_debug_page_spec.md  project_comparison.md  shooting_game_migration_plan.md  test_guide.md
doc/plans/: 2026-06-08-context-sensing-emotion-tab-restore.md  2026-06-08-multimodal-emotion-integration.md
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/common/: logger_common.h  perf_timer.h
entry/src/main/cpp/lpc/include/: EmotionDiagnostics.h  EmotionManager.h
entry/src/main/cpp/lpc/interface/: LpcType.h  i_LpcCognitionHost.h  i_LpcCognitionMgrHost.h  i_LpcListener.h
entry/src/main/cpp/lpc/src/: EmotionDiagnostics.cpp  EmotionManager.cpp
entry/src/main/cpp/lpc/tests/: TestEmotionDiagnostics.cpp
entry/src/main/cpp/render/: plugin_manager.cpp  plugin_manager.h  plugin_render.cpp  plugin_render.h
entry/src/main/cpp/render/agenui_engine/backend/: RenderFactory.cpp
entry/src/main/cpp/render/agenui_engine/backend/vulkan/: DescriptorManager.cpp  DescriptorManager.h  DynamicVertexBufferPool.cpp  DynamicVertexBufferPool.h  GlassEffect.cpp  GlassEffect.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineManager.cpp  PipelineManager.h  VkBuffer.cpp  VkBuffer.h  VkRenderer.cpp  VkRenderer.h  VkShader.cpp  VkShader.h  VkTexture.cpp  VkTexture.h  VkTextureCache.cpp  VkTextureCache.h  VulkanContext.cpp  VulkanContext.h  _gen_pipeline.py
entry/src/main/cpp/render/agenui_engine/core/: GeometryBuilder.h  IGraphicsAPI.h  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderQueue.cpp  RenderQueue.h  TextLayoutCache.h
entry/src/main/cpp/render/agenui_engine/modules/text/: FontManager.cpp  FontManager.h  MsdfAtlas.cpp  MsdfAtlas.h  MsdfAtlasData.cpp  MsdfAtlasData.h  TextAtlas.cpp  TextAtlas.h  TextLayoutEngine.cpp  TextLayoutEngine.h
entry/src/main/cpp/render/agenui_engine/modules/text/text_layout/: TextAnalysis.cpp  TextAnalysis.h  TextLayout.cpp  TextLayout.h  TextLineBreak.cpp  TextLineBreak.h  TextMeasurement.cpp  TextMeasurement.h  UnicodeUtils.cpp  UnicodeUtils.h
entry/src/main/cpp/render/agenui_engine/shaders/: README.md  image_frag.frag  image_vert.vert  msdf_text_frag.frag  simple_circle.frag  simple_circle.vert  simple_rect.frag  simple_rect.vert  simple_rounded_rect.frag  simple_rounded_rect.vert  text_frag.frag  text_vert.vert
entry/src/main/cpp/render/agenui_engine/tests/: CMakeLists.txt  run_tests.bat  run_tests.sh
entry/src/main/cpp/render/agenui_engine/tests/core/: TestRenderCommand.cpp  TestRenderContext.cpp  TestRenderQueue.cpp
entry/src/main/cpp/render/agenui_engine/tests/mocks/: MockRenderer.h
entry/src/main/cpp/render/agenui_engine/tests/text/: TestDirtyRegion.cpp  TestGlyph.cpp  TestTextAnalysis.cpp  TestTextLineBreak.cpp  TestUnicodeUtils.cpp
entry/src/main/cpp/render/agenui_engine/tests/visual/: FrameCapture.cpp  TestVisualDepthSort.cpp  TestVisualGlassEffect.cpp  TestVisualImage.cpp  TestVisualRect.cpp  TestVisualRoundedRect.cpp  TestVisualTextGlow.cpp  VisualTestFramework.h
entry/src/main/cpp/render/application/: FontConfig.cpp  FontConfig.h
entry/src/main/cpp/render/application/application/: Application.cpp  Application.h  vulkan_utils.cpp  vulkan_utils.h
entry/src/main/cpp/render/application/dsl/: A2uiDslRender.cpp  A2uiDslRender.h  CssStyleConverter.cpp  CssStyleConverter.h  CustomDslRender.cpp  CustomDslRender.h  CustomV2DslRender.cpp  CustomV2DslRender.h  DslRenderCommand.h  DslRenderRegistry.cpp  DslRenderRegistry.h  GameDslRender.cpp  GameDslRender.h  IDslRender.h  MdParser.cpp  MdParser.h  MdStyleMapper.cpp  MdStyleMapper.h
entry/src/main/cpp/render/application/game/: GameModule.cpp  GameModule.h  GameTypes.h
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/pages/: ContextSensingPage.ets  EmotionDebugPage.ets  GameConfig.ets  GamePage.ets  Index.ets  MainMenu.ets  StreamTextConfig.ets
entry/src/main/ets/prompts/: DslPrompts.ets
entry/src/main/ets/utils/: ActivityRecognizer.ets  CameraSceneService.ets  EmotionApi.ts  EmotionDebouncer.ts  EmotionDebugTypes.ets  EmotionLatencyTracker.ets  LLMClient.ts  LLMService.ets  PromptGenerator.ets  RealTimeDataService.ets  ResourceCopier.ets  SceneClassifier.ets  SceneDetector.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/rawfile/: circle.frag.spv  circle.vert.spv  image_frag.frag.spv  image_vert.vert.spv  llm_config.json.example  msdf_atlas.json  msdf_text_frag.frag.spv  simple_rect.vert.spv  simple_rounded_rect.frag.spv  simple_rounded_rect.vert.spv  text_frag.frag.spv  text_vert.vert.spv
entry/src/main/resources/rawfile/debug_cases/: streamtext_presets.json
entry/src/main/resources/rawfile/debug_cases/a2ui/: debug_cases.json
entry/src/main/resources/rawfile/debug_cases/custom/: debug_cases.json
entry/src/main/resources/rawfile/debug_cases/custom_v2/: debug_cases.json
entry/src/main/resources/rawfile/fonts/: font_config.json
entry/src/main/resources/rawfile/healing/: README.md
entry/src/main/resources/zh_CN/element/: string.json
msdf_tools/: charset.txt  generate.bat
signature/: default_GenerativeUIFroMMX_fON2v2ew9OlXKV8iV61yhCThfzZOowzC2_odyz5d4X4=.cer  default_GenerativeUIFroMMX_fON2v2ew9OlXKV8iV61yhCThfzZOowzC2_odyz5d4X4=.csr  default_GenerativeUIFroMMX_fON2v2ew9OlXKV8iV61yhCThfzZOowzC2_odyz5d4X4=.p12  default_GenerativeUIFroMMX_fON2v2ew9OlXKV8iV61yhCThfzZOowzC2_odyz5d4X4=.p7b
